Opencv now works, sends commands via http call

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">ShereCar Robot Controller</a>
+        <a class="navbar-brand" href="/">ShereCar Robot Controller (http://sherecar.org)</a>
         <div class="nav-collapse">
         </div><!--/.nav-collapse -->
       </div>
